<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.aprass.githubuser.presentation.favorite.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favorite_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_favorite_to_setting"
            app:destination="@id/navigation_settings"
            app:popUpTo="@id/navigation_settings"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aprass.githubuser.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_home_to_favorite"
            app:destination="@id/navigation_favorite"
            app:popUpTo="@id/navigation_favorite"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_home_to_setting"
            app:destination="@id/navigation_settings"
            app:popUpTo="@id/navigation_settings"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.aprass.githubuser.presentation.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_setting_to_favorite"
            app:destination="@id/navigation_favorite"
            app:popUpTo="@id/navigation_favorite"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_setting_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.aprass.githubuser.presentation.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail">
        <action
            android:id="@+id/action_userListFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/userListFragment"
        android:name="com.aprass.githubuser.presentation.UserListFragment"
        android:label="@string/title_user_list"
        tools:layout="@layout/fragment_user_list">
        <action
            android:id="@+id/action_userListFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
</navigation>